--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,15 @@
 /* Replace rave  logo */
 img.RaveIcon {
-	display: block;
+	/* display: block;
 	-moz-box-sizing: border-box;
-	box-sizing: border-box;
+	box-sizing: border-box; */
 	background: url("https://s2.gifyu.com/images/Webp.net-resizeimagedc7d9dffcb3b8cfa.gif");
 	background-size: cover;
 	background-repeat: no;
 	width: 120px;
 	height: 65px;
 	padding-left: 130px;
-	margin-top: 0px;
+	/* margin-top: 0px; */
 }
 
 /* Add stars gif to image on homepage*/
@@ -43,28 +43,22 @@ div.feedback-box {
 
 /* Set border color for navbar and tabs */
 .navbar-default,
-.nav-pills > li > a {
-	border-color: rgba(255, 255, 255, 0.1) !important; /* Set border color for navbar and tabs */
+.nav-pills>li>a {
+	border-color: rgba(255, 255, 255, 0.1) !important;
+	/* Set border color for navbar and tabs */
 }
 
 /* Set background color for active tabs */
-.nav-pills > li.active > a,
-.nav-pills > li.active > a:focus,
-.nav-pills > li > a:focus,
-.nav-pills > li > a:hover {
+.nav-pills>li.active>a,
+.nav-pills>li.active>a:focus,
+.nav-pills>li>a:focus,
+.nav-pills>li>a:hover {
 	background-color: rgba(255, 255, 255, 0.3) !important;
 }
 
 /* Make the onecloud icon background transparent */
 .onecloud-header-icon-disconnect {
 	background: transparent !important;
-	animation-name: colorshift;
-	animation-duration: 5s;
-	animation-iteration-count: infinite;
-}
-
-ul.nav.nav-tabs {
-	text-shadow: lightskyblue !important;
 }
 
 .phonenumber-div {
@@ -120,71 +114,45 @@ div.dropdown-content.ng-scope {
 	0% {
 		background-color: cornflowerblue;
 	}
+
 	10% {
 		background-color: royalblue;
 	}
+
 	20% {
 		background-color: rebeccapurple;
 	}
+
 	30% {
 		background-color: slateblue;
 	}
+
 	40% {
 		background-color: teal;
 	}
+
 	50% {
 		background-color: forestgreen;
 	}
+
 	60% {
 		background-color: green;
 	}
+
 	70% {
 		background-color: darkgreen;
 	}
+
 	80% {
 		background-color: seagreen;
 	}
+
 	90% {
 		background-color: cadetblue;
 	}
+
 	100% {
 		background-color: darkolivegreen;
-	}
-}
-
-@keyframes colorshift {
-	0% {
-		color: #01796f;
-	}
-	10% {
-		color: #0b6623;
-	}
-	20% {
-		color: #2e8b57;
-	}
-	30% {
-		color: #00a86b;
-	}
-	40% {
-		color: #29ab87;
-	}
-	50% {
-		color: #00a572;
-	}
-	60% {
-		color: #679267;
-	}
-	70% {
-		color: #4f7942;
-	}
-	80% {
-		color: #3f704d;
-	}
-	90% {
-		color: #043927;
-	}
-	100% {
-		color: #01796f;
 	}
 }
 
